# rpi-pico-workspace

./: .commitlint.config.mjs  .editorconfig  .gitignore  .gitmodules  .woke.yaml  .yamlfix.toml  .yamllint.yaml  CODEOWNERS  Cargo.toml  DEVCONTAINER.md  README.md  cliff.toml  go.work  go.work.sum
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/.github/citools/common/: gh-setup-env  (+1 more)
.devcontainer/.github/docker/: entrypoint.sh  include  layer-00.00-base-dependencies.sh  layer-00.01-base-env_setup.sh  layer-00.05-additional_deps.sh  layer-00.10-base-daggerio.sh  layer-00.50-base-docker.sh  layer-02.00-git.sh  layer-09.00-devcontainer-nodejs.sh  layer-10.00-devcontainer-gcc_clang_llvm.sh  layer-14.00-devcontainer-tools.sh  layer-15.00-devcontainer-rust.sh  layer-16.00-devcontainer-go.sh  layer-17.00-devcontainer-ruby.sh  layer-18.00-devcontainer-python.sh  layer-22.00-devcontainer-rpidev.sh  layer-25.00-tools-vscode.sh  layer-35.00-tools-tailscale.sh  layer-99.00-summary.sh
.devcontainer/scripts/: data.tmp  dc-build  dc-build-n-push  dc-destroy  dc-down  dc-list  dc-run  dc-up  dc-up-post-create-command.sh
.github/: CODEOWNERS  citools  docker
.github/workflows/: devcontainer.yaml  gh-actions.yaml  git-pr-checks.yaml  git.yaml  json.yaml  markdown.yaml  shell.yaml  spellcheck.yaml  woke.yaml  yaml.yaml
arduino/: .arduino-cli.yaml  .arduino-fqbn.conf  .clang-format  README.md  tool-compile  tool-upload
arduino/hellopico/: hellopico.ino
assembly_c_c++/: README.md
assembly_c_c++/hello_blink-pico-c/: CMakeLists.txt  hello_blink.c
assembly_c_c++/hello_blink-picow-c/: CMakeLists.txt  hello_blink.c
assembly_c_c++/hello_serial-pico-c/: CMakeLists.txt  hello_serial.c
assembly_c_c++/hello_serial-picow-c/: CMakeLists.txt  hello_serial.c
circuitpython/: README.md
circuitpython/hellopico/: code.py
micropython/: README.md
micropython/hellopico/: main.py
micropython/hellowifi/: appsecrets.py.template  main.py
micropython/helloworld/: main.py
rust/: README.md
rust/helloworld/: Cargo.toml
rust/helloworld/examples/: rpi-pico-blink.rs
rust/helloworld/src/: lib.rs
tinygo/: .tinygo.vim  README.md  env-setup.sh  go.work  go.work.sum  pico-w.json  pico.json  start-editor
tinygo/hellopico/: go.mod  hellopico.go  pico.json
tinygo/hellopicow/: go.mod  hellopicow.go  pico-w.json
tinygo/helloworld/: .tinygo.vim  helloworld.go
(+12 files in other folders)
